@@ -400,24 +400,24 @@ CONFIG_MMCSD_READONLY=n
 # CONFIG_NET_FWCACHE_SIZE - number of packets to remember when looking for duplicates
 CONFIG_NET=y
 CONFIG_NET_IPv6=n
-CONFIG_NSOCKET_DESCRIPTORS=8
+CONFIG_NSOCKET_DESCRIPTORS=16
 CONFIG_NET_SOCKOPTS=y
 CONFIG_NET_BUFSIZE=420
-CONFIG_NET_TCP=n
-CONFIG_NET_TCP_CONNS=8
+CONFIG_NET_TCP=y
+CONFIG_NET_TCP_CONNS=16
 CONFIG_NET_NTCP_READAHEAD_BUFFERS=8
 CONFIG_NET_TCPBACKLOG=n
 CONFIG_NET_MAX_LISTENPORTS=8
-CONFIG_NET_UDP=y
+CONFIG_NET_UDP=n
 CONFIG_NET_UDP_CHECKSUMS=y
 #CONFIG_NET_UDP_CONNS=10
 CONFIG_NET_ICMP=y
 CONFIG_NET_ICMP_PING=n
 #CONFIG_NET_PINGADDRCONF=0
-CONFIG_NET_STATISTICS=n
+CONFIG_NET_STATISTICS=y
 #CONFIG_NET_RECEIVE_WINDOW=
 #CONFIG_NET_ARPTAB_SIZE=8
-CONFIG_NET_BROADCAST=y
+CONFIG_NET_BROADCAST=n
 #CONFIG_NET_LLH_LEN=14
 #CONFIG_NET_FWCACHE_SIZE=2
 
